--- a/documents/refs.bib
+++ b/documents/refs.bib
@@ -17,3 +17,25 @@
   numpages   = {15},
   keywords   = {convex hull, halfspace intersection, Delaunay triangulation, Voronoi diagram}
 }
+
+@article{magaud:hal-01066671,
+  title       = {{Formalizing a Discrete Model of the Continuum in Coq from a Discrete Geometry Perspective}},
+  author      = {Magaud, Nicolas and Chollet, Agathe and Fuchs, Laurent},
+  url         = {https://hal.inria.fr/hal-01066671},
+  journal     = {{Annals of Mathematics and Artificial Intelligence}},
+  publisher   = {{Springer Verlag}},
+  year        = {2015},
+  month       = Jan,
+  doi         = {10.1007/s10472-014-9434-6},
+  pdf         = {https://hal.inria.fr/hal-01066671/file/magaud-chollet-fuchs.pdf},
+  hal_id      = {hal-01066671},
+  hal_version = {v1}
+}
+
+@misc{smith,
+  title        = {QuickHull 3D},
+  url          = {http://algolist.ru/maths/geom/convhull/qhull3d.php},
+  journal      = {Algolist - QuickHull 3D},
+  author       = {Smith, Jordan},
+  howpublished = {\url{http://algolist.ru/maths/geom/convhull/qhull3d.php}}
+}
